--- a/_posts/2018-07-07-kali_init.md
+++ b/_posts/2018-07-07-kali_init.md
@@ -7,13 +7,13 @@ tags: kali
 description: 
 ---
 
-背景：
+## 背景：
 Kali原生镜像安装完后往往需要进行一些初始配置，因此做个笔记记录。
 
-目录：
-1、 配置更新源
-2、 配置ssh
-3、 配置固定IP
+## 目录：
+1. 配置更新源
+2. 配置ssh
+3. 配置固定IP
 
 Kali的下载地址：
 官网：https://www.kali.org/downloads/
@@ -23,73 +23,76 @@ Kali的下载地址：
 清华大学：https://mirrors.tuna.tsinghua.edu.cn/kali-images/
 
 
-一、 配置更新源
+## 一、 配置更新源
+1. 查看自己的kali版本，Release字段即为版本号，如kali-rolling
+`lsb_release -a`
 
-（1） 查看自己的kali版本，Release字段即为版本号，如kali-rolling
-# lsb_release -a
-
-（2） 配置sources.list
-# vim /etc/apt/sources.list
+2. 配置sources.list
+`vim /etc/apt/sources.list`
 在sources.list中添加更新源（配置一个源即可）
 以下更新源针对kali-rolling版本，若（1）中查看到的版本号为其他，将源中的kali-rolling替换为（1）中的版本即可
 
-官方源：
-deb http://http.kali.org/kali kali-rolling main non-free contrib
-deb-src http://http.kali.org/kali kali-rolling main non-free contrib
+>官方源：
+>deb http://http.kali.org/kali kali-rolling main non-free contrib
+>deb-src http://http.kali.org/kali kali-rolling main non-free contrib
+>
+>阿里云：
+>deb http://mirrors.aliyun.com/kali kali-rolling main non-free contrib
+>deb-src http://mirrors.aliyun.com/kali kali-rolling main non-free contrib
+>
+>中科大：
+>deb http://mirrors.ustc.edu.cn/kali kali-rolling main non-free contrib
+>deb-src http://mirrors.ustc.edu.cn/kali kali-rolling main non-free contrib
+>
+>东软大学：
+>deb http://mirrors.neusoft.edu.cn/kali kali-rolling/main non-free contrib
+>deb-src http://mirrors.neusoft.edu.cn/kali kali-rolling/main non-free contrib
+>
+>清华大学：
+>deb http://mirrors.tuna.tsinghua.edu.cn/kali kali-rolling main contrib non-free
+>deb-src https://mirrors.tuna.tsinghua.edu.cn/kali kali-rolling main contrib non-free
+>
+>浙江大学：
+>deb http://mirrors.zju.edu.cn/kali kali-rolling main contrib non-free
+>deb-src http://mirrors.zju.edu.cn/kali kali-rolling main contrib non-free
 
-阿里云：
-deb http://mirrors.aliyun.com/kali kali-rolling main non-free contrib
-deb-src http://mirrors.aliyun.com/kali kali-rolling main non-free contrib
-
-中科大：
-deb http://mirrors.ustc.edu.cn/kali kali-rolling main non-free contrib
-deb-src http://mirrors.ustc.edu.cn/kali kali-rolling main non-free contrib
-
-东软大学：
-deb http://mirrors.neusoft.edu.cn/kali kali-rolling/main non-free contrib
-deb-src http://mirrors.neusoft.edu.cn/kali kali-rolling/main non-free contrib
-
-清华大学：
-deb http://mirrors.tuna.tsinghua.edu.cn/kali kali-rolling main contrib non-free
-deb-src https://mirrors.tuna.tsinghua.edu.cn/kali kali-rolling main contrib non-free
-
-浙江大学：
-deb http://mirrors.zju.edu.cn/kali kali-rolling main contrib non-free
-deb-src http://mirrors.zju.edu.cn/kali kali-rolling main contrib non-free
-
-（3） apt-get更新
+3. apt-get更新
 原生镜像中软件包一般都不是最新，需要手动更新下，以确保最佳状态
-# apt-get clean
-# apt-get update && apt-get upgrade && apt-get dist-upgrade 
+```
+apt-get clean
+apt-get update && apt-get upgrade && apt-get dist-upgrade 
+```
 
 注：apt-get update过程中可能报错GPG error，invalid key，可通过以下命令添加最新key来解决
-# wget -q -O - https://archive.kali.org/archive-key.asc | apt-key add
+`wget -q -O - https://archive.kali.org/archive-key.asc | apt-key add`
 
-二、 配置ssh
+## 二、 配置ssh
 原生镜像默认开机不启动ssh，因此无法通过命令行工具连接，需要手动开启
 
-（1） 开启root密码登陆
-# vim /etc/ssh/sshd_config
+1. 开启root密码登陆
+`vim /etc/ssh/sshd_config`
 找到PermitRootLogin配置，修改如下，保存退出
-# PermitRootLogin yes
+>PermitRootLogin yes
 
-（2） 启动ssh，通过status查看是否处于Active状态
-# /etc/init.d/ssh start
-# /etc/init.d/ssh status 
+2. 启动ssh，通过status查看是否处于Active状态
+```
+/etc/init.d/ssh start
+/etc/init.d/ssh status 
+```
 
-（3） 添加开机启动
-# update-rc.d ssh enable
+3. 添加开机启动
+`update-rc.d ssh enable`
 
-三、 配置固定IP
+## 三、 配置固定IP
 VMware启动kali时，有时候IP会发生变化，如果使用xshell、moba等工具保存了IP的话，可能会导致连不上。
-# vim /etc/network/interfaces
-在通信的网卡上配上固定IP，
-auto eth0
-
-iface eth0 inet static
-
-address 192.168.198.128
-
-netmask 255.255.255.0
-
-gateway 192.168.198.2
+`vim /etc/network/interfaces`
+在通信的网卡上配上固定IP
+>auto eth0
+>
+>iface eth0 inet static
+>
+>address 192.168.198.128
+>
+>netmask 255.255.255.0
+>
+>gateway 192.168.198.2>
